2017-02-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

	* R/anytime.R (anydate, utcdate): If converting from POSIXt, also use
	timezone argument

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* src/anytime.cpp (sformats[]): Add format with to-be-skipped
	timezone string now parsing 'Thu Sep 01 10:11:12 CDT 2016'

	* tests/allFormats.R: Added test for new format

2017-02-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/anytime.R (anydate, utcdate): Convert factor or ordered if needed

	* tests/simpleTests.R: New tests for anydate(), utcdate() and factors

	* R/init.R (.onLoad): Minor editing / refactoring

	* .travis.yml (before_install): Use https for curl fetch

2017-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* src/anytime.cpp (convertToTime): Use Rcpp's new Date(time)Vector

	* DESCRIPTION: Versioned Imports and LinkingTo 'Rcpp (>= 0.12.9),
	use versioned Depends 'R (>= 3.2.0) to ensure versioned LinkingTo

2016-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.2.0

	* inst/NEWS.Rd: Finalized for release

	* test/bulkTest.R: New set of tests

2016-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version

	* R/formats.R (iso8601, rfc2822, rfc3339): New helper functions

	* man/iso8601.Rd: New documentation for the new functions

	* NAMESPACE: Exporting new functions

	* tests/simpleTests.R: New simple tests

	* tests/gh_issue_5.R: Skip two tests if on Windows

2016-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate, utcdate): Ensure Date object is returned

2016-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* tests/simpleTests.R: More tests
	* tests/gh_issue_5.R: Idem

2016-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* tests/allFormats.R: Significantly increased number of tests
