@@ -3,6 +3,13 @@
 \newcommand{\ghpr}{\href{https://github.com/eddelbuettel/anytime/pull/#1}{##1}}
 \newcommand{\ghit}{\href{https://github.com/eddelbuettel/anytime/issues/#1}{##1}}
 
+\section{Changes in anytime version 0.2.2 (2017-xx-yy)}{
+  \itemize{
+    \item Address a corner case of integer-typed (large) values
+    corresponding to \code{POSIXct} time (Closes #56)
+  }
+}
+
 \section{Changes in anytime version 0.2.1 (2017-02-09)}{
   \itemize{
     \item The new \code{DatetimeVector} class from \CRANpkg{Rcpp} is now
