@@ -1,3 +1,8 @@
+2017-02-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (anytime_cpp): Convert large integer values in the range
+	POSIXct values as well
+
 2017-02-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.2.1
